k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-retrieval-deployment
  labels:
    app: image-retrieval
spec:
  selector:
    matchLabels:
      app: image-retrieval
      role: web
  template:
    metadata:
      labels:
        app: image-retrieval
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/image-retrieval
        imagePullPolicy: IfNotPresent
        name: image-retrieval
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /var/tmp
          name: var-tmp
        - name: proxy-cert
          mountPath: /etc/ssl/k8s/proxy-cert
      volumes:
      - name: var-tmp
        emptyDir:
          medium: "Memory"
          sizeLimit: "128Mi"
      - name: proxy-cert
        secret:
          secretName: proxy-cert
