k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-retrieval-deployment
  labels:
    app: image-retrieval
spec:
  selector:
    matchLabels:
      app: image-retrieval
      role: web
  template:
    metadata:
      labels:
        app: image-retrieval
        role: web
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - image: registry.gitlab.com/openculinary/image-retrieval
        imagePullPolicy: IfNotPresent
        name: image-retrieval
        ports:
        - containerPort: 80
        volumeMounts:
        - name: proxy-cert
          mountPath: /etc/ssl/k8s/proxy-cert
      volumes:
      - name: proxy-cert
        secret:
          secretName: proxy-cert
  replicas: 3
