k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-retrieval-service
spec:
  selector:
    app: image-retrieval
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
