k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-retrieval-service
spec:
  selector:
    app: image-retrieval
    role: web
  ports:
    - protocol: TCP
      port: 80
