k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-retrieval-ingress
spec:
  rules:
  - host: image-retrieval
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: image-retrieval-service
            port:
              number: 80
